--- a/Backend/.env
+++ b/Backend/.env
@@ -1,12 +1,13 @@
 # Server Configuration
 NODE_ENV=development
-PORT=5000
+PORT=8000
 
 # Frontend URL
 FRONTEND_URL=http://localhost:5173
 
 # Database
-MONGODB_URI=mongodb://localhost:27017/mocktest
+MONGODB_URI=mongodb+srv://bassnaidu_db_user:w8WIPXyMdTYKIIdh@cluster0.qx5wssh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-here
