--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,7 +19,7 @@
     "js-cookie": "^3.0.5",
     "@headlessui/react": "^1.7.17",
     "lucide-react": "^0.279.0",
-    "@hookform/react-hook-form": "^7.45.4",
+    "react-hook-form": "^7.45.4",
     "yup": "^1.3.2"
   },
   "devDependencies": {
