--- a/Backend/.env
+++ b/Backend/.env
@@ -3,7 +3,7 @@ NODE_ENV=development
 PORT=8000
 
 # Frontend URL
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=http://localhost:5173/
 
 # Database
 MONGODB_URI=mongodb+srv://bassnaidu_db_user:w8WIPXyMdTYKIIdh@cluster0.qx5wssh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
@@ -15,8 +15,8 @@ JWT_REFRESH_SECRET=your-super-secret-refresh-key-here
 JWT_EXPIRE=7d
 
 # Payment Gateway (Razorpay)
-RAZORPAY_KEY_ID=your_razorpay_key_id
-RAZORPAY_KEY_SECRET=your_razorpay_key_secret
+RAZORPAY_KEY_ID=rzp_test_RJrfxPXEniBxxn
+RAZORPAY_KEY_SECRET=DNOl3h4RcPrH1eDDU3BvWkLG
 
 # Email Configuration (for notifications)
 SMTP_HOST=smtp.gmail.com
@@ -43,7 +43,7 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
 # CORS Configuration
-CORS_ORIGIN=http://localhost:5173
+CORS_ORIGIN=http://localhost:5173/
 
 # Logging
 LOG_LEVEL=info
