--- a/Backend/.env
+++ b/Backend/.env
@@ -3,8 +3,7 @@ NODE_ENV=development
 PORT=8000
 
 # Frontend URL
-FRONTEND_URL=http://localhost:5173/
-
+FRONTEND_URL=https://mock-test-ten.vercel.app/
 # Database
 MONGODB_URI=mongodb+srv://bassnaidu_db_user:w8WIPXyMdTYKIIdh@cluster0.qx5wssh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
