--- a/Backend/.env
+++ b/Backend/.env
@@ -3,7 +3,7 @@ NODE_ENV=development
 PORT=8000
 
 # Frontend URL
-FRONTEND_URL=https://mock-test-ten.vercel.app/
+FRONTEND_URL=http://localhost:5173
 # Database
 MONGODB_URI=mongodb+srv://bassnaidu_db_user:w8WIPXyMdTYKIIdh@cluster0.qx5wssh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
@@ -42,7 +42,7 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
 # CORS Configuration
-CORS_ORIGIN=https://mock-test-ten.vercel.app/
+CORS_ORIGIN=http://localhost:5173
 
 # Logging
 LOG_LEVEL=info
