--- a/Backend/package.json
+++ b/Backend/package.json
@@ -32,7 +32,8 @@
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "jest": "^29.6.2",
