--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,29 +11,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "axios": "^1.5.0",
+    "csv-parser": "^3.2.0",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.279.0",
+    "multer": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "axios": "^1.5.0",
-    "socket.io-client": "^4.7.2",
-    "js-cookie": "^3.0.5",
-    "@headlessui/react": "^1.7.17",
-    "lucide-react": "^0.279.0",
     "react-hook-form": "^7.45.4",
+    "react-router-dom": "^6.15.0",
+    "socket.io-client": "^4.7.2",
+    "xlsx": "^0.18.5",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5",
-    "tailwindcss": "^3.3.3",
     "postcss": "^8.4.29",
-    "autoprefixer": "^10.4.15"
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.4.5"
   },
   "engines": {
     "node": ">=16.0.0"
