--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,12 +14,14 @@
     "@headlessui/react": "^1.7.17",
     "axios": "^1.5.0",
     "csv-parser": "^3.2.0",
+    "framer-motion": "^12.23.22",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.279.0",
     "multer": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.15.0",
     "socket.io-client": "^4.7.2",
     "xlsx": "^0.18.5",
