--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,7 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^1.7.17",
+    "@mui/material": "^7.3.2",
     "axios": "^1.12.2",
     "csv-parser": "^3.2.0",
     "framer-motion": "^12.23.22",
