--- a/Backend/.env
+++ b/Backend/.env
@@ -5,7 +5,7 @@ PORT=8000
 # Frontend URL
 FRONTEND_URL=http://localhost:5173
 # Database
-MONGODB_URI=mongodb+srv://bassnaidu_db_user:w8WIPXyMdTYKIIdh@cluster0.qx5wssh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://bassnaidu_db_user:w8WIPXyMdTYKIIdh@cluster0.qx5wssh.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 
 
 # JWT Configuration
