--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
+  "name": "mocktest",
+  "version": "1.0.0",
+  "description": "Mock Test Management System",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "verify-setup": "node verify_setup.js"
+  },
   "dependencies": {
     "dotenv": "^17.2.3"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
