hope for deplyment

--- a/Backend/.env
+++ b/Backend/.env
@@ -42,7 +42,7 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
 # CORS Configuration
-CORS_ORIGIN=http://localhost:5173
+CORS_ORIGIN=https://mock-test-ten.vercel.app
 
 # Logging
 LOG_LEVEL=info
