--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,18 +15,52 @@
     "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^1.7.17",
     "@mui/material": "^7.3.2",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "axios": "^1.12.2",
+    "class-variance-authority": "^0.7.1",
+    "cmdk": "^1.1.1",
     "csv-parser": "^3.2.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.22",
+    "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.279.0",
     "multer": "^2.0.2",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^5.5.0",
+    "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.15.0",
+    "recharts": "^3.3.0",
     "socket.io-client": "^4.7.2",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
     "yup": "^1.3.2"
   },
