--- a/Backend/package.json
+++ b/Backend/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^7.8.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6",
     "socket.io": "^4.7.2",
     "xlsx": "^0.18.5"
