--- a/Backend/.env
+++ b/Backend/.env
@@ -42,7 +42,7 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
 # CORS Configuration
-CORS_ORIGIN=https://mocktest-bckx.onrender.com
+CORS_ORIGIN=http://localhost:5173
 
 # Logging
 LOG_LEVEL=info
