--- a/Backend/.env
+++ b/Backend/.env
@@ -1,12 +1,12 @@
 # Server Configuration
-NODE_ENV=development
+NODE_ENV=production
 PORT=8000
 
 # Frontend URL
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://prepzon.com
+
 # Database
 MONGODB_URI=mongodb+srv://bassnaidu_db_user:w8WIPXyMdTYKIIdh@cluster0.qx5wssh.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
-
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-here
@@ -34,7 +34,7 @@ REDIS_URL=redis://localhost:6379
 RAZORPAY_WEBHOOK_SECRET=your_webhook_secret
 
 # Admin Configuration
-ADMIN_EMAIL=admin@mocktest.com
+ADMIN_EMAIL=admin@prepzon.com
 ADMIN_PASSWORD=admin123
 
 # Rate Limiting
@@ -42,7 +42,7 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
 # CORS Configuration
-CORS_ORIGIN=http://localhost:5173
+CORS_ORIGIN=https://prepzon.com,http://prepzon.com,http://195.35.6.57
 
 # Logging
 LOG_LEVEL=info
