--- a/Backend/.env
+++ b/Backend/.env
@@ -6,7 +6,7 @@ PORT=8000
 FRONTEND_URL=https://prepzon.com
 
 # Database
-MONGODB_URI=mongodb+srv://bassnaidu_db_user:w8WIPXyMdTYKIIdh@cluster0.qx5wssh.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://muralioracle1987_db_user:RF6r25UBKfo5gnCy@clusterprepzon.m611ty5.mongodb.net/?appName=clusterprepzon
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-here
@@ -35,7 +35,7 @@ RAZORPAY_WEBHOOK_SECRET=your_webhook_secret
 
 # Admin Configuration
 ADMIN_EMAIL=admin@prepzon.com
-ADMIN_PASSWORD=admin123
+ADMIN_PASSWORD=admin2025
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
